<resources>
    <string name="app_name">StudyQuiz</string>
    <string name="title_activity_quiz">quiz</string>
    <string name="title_main_activity">Practice Study Quiz</string>
    <string name="title_name_input">Enter Your Name</string>
    <string name="btn_name_submit">Start Quiz</string>
    <string name="btn_answer_a">A</string>
    <string name="btn_answer_b">B</string>
    <string name="btn_answer_c">C</string>
    <string name="btn_answer_d">D</string>
</resources>
