<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context="com.mobileapp.grady.studyquiz.MainActivity">


    <TextView
        android:id="@+id/lblMainTitle"
        android:layout_width="234dp"
        android:layout_height="34dp"
        android:text="@string/title_main_activity"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="32dp" />

    <TextView
        android:id="@+id/lblNameTitle"
        android:layout_width="127dp"
        android:layout_height="19dp"
        android:text="@string/title_name_input"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="124dp" />

    <EditText
        android:id="@+id/editTextNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="156dp" />

    <Button
        android:id="@+id/btnNameSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_name_submit"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="229dp" />
</android.support.constraint.ConstraintLayout>
