<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobileapp.grady.studyquiz.QuizActivity"
    android:background="@android:color/darker_gray">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="587dp"
        android:orientation="vertical"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/tvDisplay"
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:background="@android:color/white"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="2dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="66dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnAnswerA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_blue_bright"
                    android:text="@string/btn_answer_a"
                    android:textAlignment="center"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAnswerA"
                    android:layout_width="315dp"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnAnswerB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_green_light"
                    android:text="@string/btn_answer_b"
                    android:textAlignment="center"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAnswerB"
                    android:layout_width="315dp"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnAnswerC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_orange_dark"
                    android:text="@string/btn_answer_c"
                    android:textAlignment="center"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAnswerC"
                    android:layout_width="315dp"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnAnswerD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_purple"
                    android:text="@string/btn_answer_d"
                    android:textAlignment="center"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAnswerD"
                    android:layout_width="315dp"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
